fix: overflow bug

--- a/client/components/Landing/Landing.scss
+++ b/client/components/Landing/Landing.scss
@@ -10,6 +10,7 @@ $shadow-offset: 2px;
   height: 100vh;
   overflow: hidden;
   background-color: darkcyan;
+  position: relative;
 
   &__start-game-button {
     outline: none;
